# motphys

./: readme.md
.github/workflows/: check.yml
crates/physics_engine_bevy/: Cargo.toml
crates/physics_engine_bevy/src/: lib.rs  utils.rs
crates/physics_engine_core/: Cargo.toml
crates/physics_engine_core/src/: joint.rs  lib.rs  math.rs  obb.rs  rigid.rs  shape.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/editor/: Cargo.toml  readme.md
examples/editor/src/: common.rs  gui.rs  main.rs  toggle_switch.rs  util.rs
examples/string/: Cargo.toml
examples/string/src/: main.rs
examples/three_js/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
examples/three_js/src/: index.ts
examples/three_js/src/physics_engine/: package.json  physics_engine_core.d.ts  physics_engine_core.js  physics_engine_core_bg.js  physics_engine_core_bg.wasm.d.ts
