[package]
name = "physics_engine_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14.0", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
wasm-bindgen = "0.2.92"

[features]
default = []
use_bevy = ["bevy"]
